--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ body {
     color: dark rgb(97, 94, 94);
     text-align: center;
   }
+  h2{
+    color: dark rgb(97, 94, 94);
+    text-align: center;
+  }
+  li{
+    color: dark rgb(97, 94, 94);
+    text-align: center;
+  }
   
   p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
