--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 body {
     background-color: rgb(156, 189, 182);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
   }
   
   h1 {
