--- a/style.css
+++ b/style.css
@@ -1,21 +1,26 @@
 
 body {
     background-color: rgb(156, 189, 182);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
   }
   
   h1 {
     color: dark rgb(97, 94, 94);
     text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
   }
   h2{
     color: dark rgb(97, 94, 94);
     text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
   }
   li{
     color: dark rgb(97, 94, 94);
     text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
   }
   
   p {
