--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 
+head {
+  font: 'green piloww';
+  font-size: 20px;
+  color: dark rgb(97, 94, 94);
+}
+
+
 body {
     background-color: rgb(156, 189, 182);
 
@@ -7,7 +14,7 @@ body {
   h1 {
     color: dark rgb(97, 94, 94);
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Breakfast and Chill' 
     font-size: 20px;
   }
   h2{
