--- a/style.css
+++ b/style.css
@@ -20,8 +20,12 @@ body {
   h2{
     color: dark rgb(97, 94, 94);
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+    @font-face{
+      font-family: "madeleina-sans-font"
+      src: url "MadeleinaSans-2VY3.ttf"
+      font-size: 20px;
+    }
+  
   }
   li{
     color: dark rgb(160, 114, 114);
