--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@font-face{
+  font-family: 'madeleina-sans-font7';
+  src: url('fonts/Dkcarteblanche.otf');
+  font-size: 2px;
+}
+
+@font-face{
+  font-family: 'madeleina-sans-font2';
+  src: url('fonts/Dkcarteblanche.otf');
+  font-size: 20px;
+}
 
 head {
   font: 'green piloww', Monospace;
@@ -5,26 +16,20 @@ head {
   color: dark rgb(97, 94, 94);
 }
 
-
 body {
-    background-color: rgb(0, 0, 182);
+    background-color: rgb(100, 100, 182);
 
   }
   
   h1 {
-    color: dark rgb(97, 94, 94);
-    text-align: center;
-    font-family: 'Lucida console', Monospace;
-    font-size: 20px;
+    color: dark rgb(156, 53, 53);
+    text-align: left;
+    font-family: 'madeleina-sans-font7'
   }
   h2{
     color: dark rgb(97, 94, 94);
     text-align: center;
-    @font-face{
-      font-family: "madeleina-sans-font"
-      src: url ("MadeleinaSans-2VY3.ttf")
-      font-size: 20px;
-    }
+    font-family: 'madeleina-sans-font2'
   
   }
   li{
