--- a/style.css
+++ b/style.css
@@ -1,17 +1,15 @@
 @font-face{
-  font-family: 'madeleina-sans-font7';
-  src: url('fonts/Dkcarteblanche.otf');
-  font-size: 2px;
+  font-family: 'Dkcarteblanche';
+  src: url('fonts/Dkcarteblanche-Dp0m.otf');
 }
 
 @font-face{
-  font-family: 'madeleina-sans-font2';
-  src: url('fonts/Dkcarteblanche.otf');
-  font-size: 20px;
+  font-family: 'MadeleinaSans';
+  src: url('fonts/madeleina-sans-font.zip/MadeleinaSans-2VY3.ttf');
 }
 
 head {
-  font: 'green piloww', Monospace;
+  font: 'MadeleinaSans';
   font-size: 20px;
   color: dark rgb(97, 94, 94);
 }
@@ -23,13 +21,13 @@ body {
   
   h1 {
     color: dark rgb(156, 53, 53);
-    text-align: left;
-    font-family: 'madeleina-sans-font7'
+    text-align: centre;
+    font-family: 'Dkcarteblanche'
   }
   h2{
     color: dark rgb(97, 94, 94);
     text-align: center;
-    font-family: 'madeleina-sans-font2'
+    font-family: 'MadeleinaSans'
   
   }
   li{
