--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   
   h1 {
     color: dark rgb(156, 53, 53);
-    text-align: centre;
+    text-align: center;
     font-family: 'Dkcarteblanche'
   }
   h2{
