--- a/style.css
+++ b/style.css
@@ -28,20 +28,26 @@ body {
     color: dark rgb(156, 53, 53);
     text-align: center;
     font-family: 'Crafty Girls', cursive;
+    font-size: 35px
   }
 
   h2{
     color: dark rgb(97, 94, 94);
     text-align: center;
     font-family: 'Crafty Girls', cursive;
-    font-size: 25px
+    font-size: 30px
   }
 
   h3{
     color: dark rgb(97, 94, 94);
     text-align: center;
     font-family: 'Crafty Girls', cursive;
-    font-size: 15px;
+    font-size: 20px;
+  }
+
+  h4{
+    font-family: 'Economica', sans-serif;
+    font-size: 30px;
   }
 
 
@@ -60,6 +66,11 @@ body {
   }
   
   p {
+    font-family: 'Economica', sans-serif;
+    font-size: 20px;
+  }
+  
+  caption{
     font-family: 'Economica', sans-serif;
     font-size: 20px;
   }
