--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 @font-face{
   font-family: 'CraftyGirls';
   src: url('fonts/CraftyGirls-Regular.ttf');
+  
 }
 
 @font-face{
@@ -25,10 +26,10 @@ body {
   }
   
   h1 {
-    color: dark rgb(156, 53, 53);
     text-align: center;
     font-family: 'Crafty Girls', cursive;
-    font-size: 35px
+    font-size: 40px
+    
   }
 
   h2{
@@ -81,13 +82,13 @@ body {
     text-decoration: none;
     color: rgb(132, 143, 138);
     background-color: rgba(240, 238, 223, 0.76);
-    background-size: 10px;
-   
+    padding: 5px 8px;
   }
 
   a:visited{
     text-decoration: none;
     color: rgb(132, 143, 138);
+    padding: 5px 8px;
   }
 
   a:hover{
