--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ body {
 
   h5{
     color: dark rgb(131, 21, 21);
-    font-family: 'Economica', sans-serif;
-    font-size: 20px; 
+    font-family: "Calibri", sans-serif;
+    font-size: 30px; 
   }
 
 
