--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ body {
     color: dark rgb(97, 94, 94);
     text-align: center;
     font-family: 'Crafty Girls', cursive;
-    font-size: 30px
+    font-size: 30px;
+    margin-bottom: 0px;
   }
 
   h3{
@@ -44,6 +45,7 @@ body {
     text-align: center;
     font-family: 'Crafty Girls', cursive;
     font-size: 20px;
+    margin-top: 0px;
   }
 
   h4{
@@ -53,8 +55,8 @@ body {
 
   h5{
     color: dark rgb(131, 21, 21);
-    font-family: "Calibri", sans-serif;
-    font-size: 30px; 
+    font-family: "Verdana", sans-serif;
+    font-size: 20px; 
   }
 
 
@@ -74,8 +76,8 @@ body {
   }
   
   p {
-    font-family: 'Economica', sans-serif;
-    font-size: 20px;
+    font-family: "Verdana", sans-serif;
+    font-size: 13px;
   }
 
   a:link{
