--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
+
+.leftside{
+    background:lightslategray;
+
+    margin-left: 40px;
+    margin-right: 0px;
+    height:300px;
+    width:90%; 
+    text-align: center;
+  
+   
+}
+
+.midside{
+  background: grey;
+  
+  margin-right: 0px;
+  margin-left: 45px;
+  height:300px;
+  width:80%; 
+}
+
+.rightside{
+    background:lightsteelblue;
+    border-style: dotted;
+    margin-right: 40px;
+    margin-left: 0px;
+    height:300px;
+    width:80%; 
+  
+}
+
 @font-face{
   font-family: 'Cuprum';
   src: url('fonts/Cuprum-Regular.ttf');
@@ -34,29 +66,36 @@ body {
 
   h2{
     color: dark rgb(97, 94, 94);
-    text-align: center;
+    text-align: left;
     font-family: 'Crafty Girls', cursive;
     font-size: 30px;
     margin-bottom: 0px;
+    margin-left: 40px;
   }
 
   h3{
     color: dark rgb(97, 94, 94);
-    text-align: center;
+    text-align: left;
     font-family: 'Crafty Girls', cursive;
     font-size: 20px;
     margin-top: 0px;
+    margin-left: 40px;
+    margin-bottom: 20px;
   }
 
   h4{
+    text-align: center;
     font-family: 'Economica', sans-serif;
     font-size: 25px;
+    margin-left: 40px;
+    margin-bottom: 20px;
   }
 
   h5{
     color: dark rgb(131, 21, 21);
     font-family: "Verdana", sans-serif;
     font-size: 20px; 
+    margin-left: 40px;
   }
 
 
@@ -73,11 +112,13 @@ body {
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
+    margin-left: 40px;
   }
   
   p {
     font-family: "Verdana", sans-serif;
     font-size: 13px;
+    margin-left: 40px;
   }
 
   a:link{
