--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   width:100%; 
   border-style: solid;
   border-radius: 20px;
-  border-color:rgb(79, 82, 77);
+  border-color:#AEB9B1;
 
 }
 
@@ -43,7 +43,7 @@
   width:100%; 
   border-style: solid;
   border-radius: 20px;
-  border-color:rgb(79, 82, 77);
+  border-color:#AEB9B1;
 
 }
 
@@ -59,7 +59,7 @@
   width:100%; 
   border-style: solid;
   border-radius: 20px;
-  border-color:rgb(79, 82, 77);
+  border-color:#AEB9B1;
 
 }
 
@@ -76,7 +76,7 @@
   width:80%; 
   border-style: solid;
   border-radius: 20px;
-  border-color:rgb(79, 82, 77);
+  border-color:#AEB9B1;
 
 }
 
@@ -92,7 +92,7 @@ height:370px;
 width:100%; 
 border-style: solid;
 border-radius: 20px;
-border-color:rgb(79, 82, 77);
+border-color:#AEB9B1;
 
 }
 
@@ -108,7 +108,7 @@ border-color:rgb(79, 82, 77);
   width:80%; 
   border-style: solid;
   border-radius: 20px;
-  border-color:rgb(79, 82, 77);
+  border-color:#AEB9B1;
 
 }
 
@@ -124,11 +124,13 @@ border-color:rgb(79, 82, 77);
   width:100%; 
   border-style: solid;
   border-radius: 20px;
-  border-color:rgb(79, 82, 77);
+  border-color:#AEB9B1;
   
   }
 
-
+  .profile_button{
+    margin-bottom: 150px;
+  }
 
 @font-face{
   font-family: 'Cuprum';
@@ -198,7 +200,7 @@ body {
   }
 
   h5{
-    color: dark rgb(131, 21, 21);
+    color: rgb(83, 80, 62);
     font-family: "Verdana", sans-serif;
     font-size: 20px; 
     margin-left: 40px;
@@ -276,6 +278,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
   }
   .pc{
     display: inline-block;
