--- a/style.css
+++ b/style.css
@@ -201,9 +201,10 @@ body {
 
   h5{
     color: rgb(83, 80, 62);
-    font-family: "Verdana", sans-serif;
-    font-size: 20px; 
+    font-family: 'Economica', sans-serif;
+    font-size: 25px;
     margin-left: 40px;
+    margin-bottom: 20px;
   }
 
 
@@ -306,3 +307,5 @@ body {
     display: inline-block;
     margin: 8px;
   }
+
+  
