--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@
   margin-right: 0px;
   margin-left: 20px;
   margin-top: 15px;
-  margin-bottom: 40px;
   padding-top: 15px;
   padding-bottom: 20px;
   padding-right: 40px;
@@ -156,7 +155,7 @@ head {
 }
 
 body {
-    background-color: rgb(225, 233, 223);
+    background-color: #e1e9df;
 
   }
   
@@ -305,7 +304,69 @@ body {
   .week1c{
     display: inline-block;
     margin: 8px;
+    margin-left: 40px;
+  
   }
+
+  .week3a{
+    display: inline-block;
+    margin: 8px;
+    margin-left: 40px;
+  }
+
+  .week3b{
+    display: inline-block;
+    margin: 8px;
+    margin-left: 40px;
+ 
+  }
+
+  .week3c{
+    display: inline-block;
+    margin: 8px;
+    margin-left: 40px;
+  }
+  .mickey1{
+    height:350px;
+    width:100%; 
+}
+  .mickey2{
+  margin-right: 0px;
+  margin-left: 20px;
+  padding-top: 15px;
+  padding-bottom: 20px;
+  padding-right: 40px;
+  height:170px;
+  width:100%; 
+  border-style: solid;
+  border-radius: 20px;
+  border-color:#AEB9B1;
+  }
+
+  .mickey3{
+    height:350px;
+    width:100%; 
+  }
+
+  .week5a{
+    display: inline-block;
+    margin: 8px;
+    margin-left: 40px;
+  }
+
+  .week5b{
+    display: inline-block;
+    margin: 8px;
+    margin-left: 40px;
+ 
+  }
+
+  .week5c{
+    display: inline-block;
+    margin: 8px;
+    margin-left: 40px;
+  }
+
 
   
   .demo_image{
