--- a/style.css
+++ b/style.css
@@ -153,8 +153,7 @@ body {
     text-align: center;
     font-family: 'Economica', sans-serif;
     font-size: 60px
-
-    
+   
   }
 
   h2{
@@ -190,12 +189,30 @@ body {
 
   h5{
     color: rgb(83, 80, 62);
+    padding: 10px;
+    text-align: center;
+    font-family: 'Economica', sans-serif;
+    font-size: 20px;
+    margin-top: 0px;
+    margin-left: 350px;
+    margin-right: 350px;
+    margin-bottom: 20px;
+    border-style: solid;
+    border-radius: 20px;
+    border-color:#AEB9B1;
+  
+  }
+
+  h6{
+    color: rgb(83, 80, 62);
+    padding: 10px;
+    text-align: center;
     font-family: 'Economica', sans-serif;
     font-size: 25px;
+    margin-top: 0px;
     margin-left: 40px;
     margin-bottom: 20px;
   }
-
 
 
   #weeklinks{
@@ -206,13 +223,6 @@ body {
   
   }
 
-  li{
-    color: dark rgb(160, 114, 114);
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-    margin-left: 40px;
-  }
   
   p {
     font-family: "Verdana", sans-serif;
