--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ body {
 
   .profile photo pt2{
     color: rgb(83, 80, 62);
+    background-color: rgb(209, 208, 188);
     padding: 10px;
     text-align: center;
     font-family: 'Economica', sans-serif;
